; ModuleID = '/home/carl/AnghaBench/jq/src/extr_compile.c_block_free.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_compile.c_block_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inst = type { %struct.inst* }
%struct.TYPE_3__ = type { %struct.inst* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @block_free(%struct.inst* %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 8
  %3 = alloca %struct.inst*, align 8
  %4 = alloca %struct.inst*, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  store %struct.inst* %0, %struct.inst** %5, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %7 = load %struct.inst*, %struct.inst** %6, align 8
  store %struct.inst* %7, %struct.inst** %4, align 8
  br label %8

8:                                                ; preds = %17, %1
  %9 = load %struct.inst*, %struct.inst** %4, align 8
  %10 = icmp ne %struct.inst* %9, null
  br i1 %10, label %11, label %19

11:                                               ; preds = %8
  %12 = load %struct.inst*, %struct.inst** %4, align 8
  %13 = getelementptr inbounds %struct.inst, %struct.inst* %12, i32 0, i32 0
  %14 = load %struct.inst*, %struct.inst** %13, align 8
  store %struct.inst* %14, %struct.inst** %3, align 8
  %15 = load %struct.inst*, %struct.inst** %4, align 8
  %16 = call i32 @inst_free(%struct.inst* %15)
  br label %17

17:                                               ; preds = %11
  %18 = load %struct.inst*, %struct.inst** %3, align 8
  store %struct.inst* %18, %struct.inst** %4, align 8
  br label %8

19:                                               ; preds = %8
  ret void
}

declare dso_local i32 @inst_free(%struct.inst*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
